src/snapshots/funky__tests__br_table.wasm.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: RefCell {
        value: ModuleInstance {
            start: 0,
            code: [
                FunctionBody {
                    locals: [],
                    code: [
                        Ctrl(
                            OP_BLOCK(
                                Empty,
                                [
                                    Ctrl(
                                        OP_BLOCK(
                                            Empty,
                                            [
                                                Ctrl(
                                                    OP_BLOCK(
                                                        Empty,
                                                        [
                                                            Ctrl(
                                                                OP_BLOCK(
                                                                    Empty,
                                                                    [
                                                                        Ctrl(
                                                                            OP_BLOCK(
                                                                                Empty,
                                                                                [
                                                                                    Var(
                                                                                        OP_LOCAL_GET(
                                                                                            0,
                                                                                        ),
                                                                                    ),
                                                                                    Ctrl(
                                                                                        OP_BR_TABLE(
                                                                                            [
                                                                                                3,
                                                                                                2,
                                                                                                1,
                                                                                                0,
                                                                                            ],
                                                                                            4,
                                                                                        ),
                                                                                    ),
                                                                                    Num(
                                                                                        OP_I32_CONST(
                                                                                            99,
                                                                                        ),
                                                                                    ),
                                                                                    Ctrl(
                                                                                        OP_RETURN,
                                                                                    ),
                                                                                ],
                                                                            ),
                                                                        ),
                                                                        Num(
                                                                            OP_I32_CONST(
                                                                                100,
                                                                            ),
                                                                        ),
                                                                        Ctrl(
                                                                            OP_RETURN,
                                                                        ),
                                                                    ],
                                                                ),
                                                            ),
                                                            Num(
                                                                OP_I32_CONST(
                                                                    101,
                                                                ),
                                                            ),
                                                            Ctrl(
                                                                OP_RETURN,
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_CONST(
                                                        102,
                                                    ),
                                                ),
                                                Ctrl(
                                                    OP_RETURN,
                                                ),
                                            ],
                                        ),
                                    ),
                                    Num(
                                        OP_I32_CONST(
                                            103,
                                        ),
                                    ),
                                    Ctrl(
                                        OP_RETURN,
                                    ),
                                ],
                            ),
                        ),
                        Num(
                            OP_I32_CONST(
                                104,
                            ),
                        ),
                    ],
                },
            ],
            fn_types: [
                FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
            ],
            funcaddrs: [
                0,
            ],
            tableaddrs: [],
            memaddrs: [],
            globaladdrs: [],
            exports: [
                ExportInstance {
                    name: "multiple",
                    value: Function {
                        ty: 0,
                    },
                },
                ExportInstance {
                    name: "br_table",
                    value: Function {
                        ty: 0,
                    },
                },
            ],
        },
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        Ctrl(
                            OP_BLOCK(
                                Empty,
                                [
                                    Ctrl(
                                        OP_BLOCK(
                                            Empty,
                                            [
                                                Ctrl(
                                                    OP_BLOCK(
                                                        Empty,
                                                        [
                                                            Ctrl(
                                                                OP_BLOCK(
                                                                    Empty,
                                                                    [
                                                                        Ctrl(
                                                                            OP_BLOCK(
                                                                                Empty,
                                                                                [
                                                                                    Var(
                                                                                        OP_LOCAL_GET(
                                                                                            0,
                                                                                        ),
                                                                                    ),
                                                                                    Ctrl(
                                                                                        OP_BR_TABLE(
                                                                                            [
                                                                                                3,
                                                                                                2,
                                                                                                1,
                                                                                                0,
                                                                                            ],
                                                                                            4,
                                                                                        ),
                                                                                    ),
                                                                                    Num(
                                                                                        OP_I32_CONST(
                                                                                            99,
                                                                                        ),
                                                                                    ),
                                                                                    Ctrl(
                                                                                        OP_RETURN,
                                                                                    ),
                                                                                ],
                                                                            ),
                                                                        ),
                                                                        Num(
                                                                            OP_I32_CONST(
                                                                                100,
                                                                            ),
                                                                        ),
                                                                        Ctrl(
                                                                            OP_RETURN,
                                                                        ),
                                                                    ],
                                                                ),
                                                            ),
                                                            Num(
                                                                OP_I32_CONST(
                                                                    101,
                                                                ),
                                                            ),
                                                            Ctrl(
                                                                OP_RETURN,
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_CONST(
                                                        102,
                                                    ),
                                                ),
                                                Ctrl(
                                                    OP_RETURN,
                                                ),
                                            ],
                                        ),
                                    ),
                                    Num(
                                        OP_I32_CONST(
                                            103,
                                        ),
                                    ),
                                    Ctrl(
                                        OP_RETURN,
                                    ),
                                ],
                            ),
                        ),
                        Num(
                            OP_I32_CONST(
                                104,
                            ),
                        ),
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
}
