src/snapshots/funky__tests__function_call.wasm.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: RefCell {
        value: ModuleInstance {
            start: 0,
            code: [
                FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                1,
                            ),
                        ),
                        Num(
                            OP_I32_ADD,
                        ),
                    ],
                },
                FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_CALL(
                                0,
                            ),
                        ),
                    ],
                },
            ],
            fn_types: [
                FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
            ],
            funcaddrs: [
                0,
                1,
            ],
            tableaddrs: [],
            memaddrs: [],
            globaladdrs: [],
            exports: [
                ExportInstance {
                    name: "timesTwo",
                    value: Function {
                        ty: 1,
                    },
                },
            ],
        },
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                1,
                            ),
                        ),
                        Num(
                            OP_I32_ADD,
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_CALL(
                                0,
                            ),
                        ),
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
}
